# mandelbrot

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: auto_delete.rs  color.rs  complex.rs  index.html  main.rs  mandelbrot.rs  render.rs  server.rs
